user profile edits, new permissions